--- a/templates/layouts/master.html
+++ b/templates/layouts/master.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="{{ lang }}">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{% block title %}{% endblock %} | Contacts Flask </title>
-	<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-	<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>{% block title %}{% endblock %} | Contacts Flask </title>
+		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
   </head>
   <body>
 	<nav class="navbar navbar-default">
@@ -18,7 +18,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#">Contactos</a>
+		  <a class="navbar-brand" href="#">Contact Manager</a>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<form action="{{ url_for('search') }}" method="get" class="navbar-form navbar-left">
@@ -39,7 +39,12 @@
 		{% with messages = get_flashed_messages(with_categories=true) %}
 		  {% if messages %}
 			{% for category, message in messages %}
-			  <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+			  <div id="alert-{{ loop.index }}" class="alert alert-dismissable alert-{{ category }}" role="alert">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  					<span aria-hidden="true"><span class="glyphicon glyphicon-remove"></span></span>
+					</button>
+					{{ message }}					
+				</div>
 			{% endfor %}
 		  {% endif %}
 		{% endwith %}
