--- a/templates/web/contacts.html
+++ b/templates/web/contacts.html
@@ -21,15 +21,11 @@
 			<td>{{ contact.phone }}</td>
 			<td class="text-right">
 				<div class="row">
-					<div class="col-xs-6">
-						<a class="btn btn-primary" href="{{ url_for('edit_contact', id=contact.id) }}">Edit</a>
-					</div>
-					<div class="col-xs-6">
-						<form action="{{ url_for('contacts_delete') }}" method="post">
-							<input type="hidden" name="id" value="{{ contact.id }}">
-							<input type="submit" class="btn btn-danger" data-toggle="confirmation" {# data-title="¿Estas seguro?" #} value="Delete">
-						</form>
-					</div>
+					<form action="{{ url_for('contacts_delete') }}" method="post" class="pull-right">
+						<input type="hidden" name="id" value="{{ contact.id }}">
+						<input type="submit" class="btn btn-danger" data-toggle="confirmation" {# data-title="¿Estas seguro?" #} value="Delete">
+					</form>
+					<a class="btn btn-primary pull-right" href="{{ url_for('edit_contact', id=contact.id) }}">Edit</a>
 				</div>
 			</td>
 		</tr>
