--- a/templates/layouts/master.html
+++ b/templates/layouts/master.html
@@ -28,10 +28,21 @@
 			</div>
 			<button type="submit" class="btn btn-default">查询</button>
 		  </form>
-		  <ul class="nav navbar-nav navbar-right">
-			  <li><a href="{{ url_for('new_contact') }}">新建</a></li>
-			  <li><a href="{{ url_for('contacts') }}">阅览全部</a></li>
-		  </ul>
+
+		  	<ul class="nav navbar-nav navbar-right">
+			  	<li><a href="{{ url_for('new_contact') }}">新建</a></li>
+				<li><a href="{{ url_for('contacts') }}">阅览全部</a></li>
+				
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">客户信息<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+					  <li><a href="{{ url_for('test1') }}">客户公司信息</a></li>
+					  <li><a href="{{ url_for('test2') }}">购买记录</a></li>
+					  <li><a href="{{ url_for('test3') }}">客户咨询记录</a></li>
+					</ul>
+				</li>
+			</ul>
+
 		</div>
 	  </div>
 	</nav>
