--- a/templates/layouts/master.html
+++ b/templates/layouts/master.html
@@ -36,9 +36,9 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">客户信息<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-					  <li><a href="{{ url_for('test1') }}">客户公司信息</a></li>
-					  <li><a href="{{ url_for('test2') }}">购买记录</a></li>
-					  <li><a href="{{ url_for('test3') }}">客户咨询记录</a></li>
+					  <li><a href="{{ url_for('test1') }}">IP登陆地统计</a></li>
+					  <li><a href="{{ url_for('test2') }}">登陆市场统计</a></li>
+					  <li><a href="{{ url_for('test3') }}">登录次数统计</a></li>
 					</ul>
 				</li>
 			</ul>
