--- a/templates/layouts/master.html
+++ b/templates/layouts/master.html
@@ -37,7 +37,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">客户信息<span class="caret"></span></a>
 					<ul class="dropdown-menu">
 					  <li><a href="{{ url_for('test1') }}">IP登陆地统计</a></li>
-					  <li><a href="{{ url_for('test2') }}">登陆市场统计</a></li>
+					  <li><a href="{{ url_for('test2') }}">登陆时长统计</a></li>
 					  <li><a href="{{ url_for('test3') }}">登录次数统计</a></li>
 					</ul>
 				</li>
